[package]
name = "rustmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
hyper-tls = "0.5.0"
serde_json = "1.0.94"
dirs = "4.0.0"
